# HazeClient

./: .gitignore  AGENTS.md  BRANDING - Shortcut.lnk  BRANDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/: CODEOWNERS
docs/: index.html  script.js  style.css
e2e/: README.md  TESTIDS.md  package.json  playwright.config.ts
haze-core-framework/: ARCHITECTURE.md  build.gradle
haze-electron-app/: CHANGELOG.legacy.md  build.ts  build_errors.txt  build_errors_utf8.txt  fix_exports.js  package.json  postinstall.ts  tsconfig.json
haze-in-game/: build.gradle  gradle.properties  settings.gradle
haze-runtime/: constant.ts  package.json
haze-runtime-api/: client.d.ts  index.ts  monitorClient.d.ts  package.json
haze-ui/: package.json  tsconfig.json  uno.config.ts  vite.config.ts
i18n/: CONTRIBUTING.de.md  CONTRIBUTING.i18n.md  CONTRIBUTING.ko.md  CONTRIBUTING.pl.md  CONTRIBUTING.ru.md  CONTRIBUTING.ua.md  CONTRIBUTING.zh.md  README.de.md  README.es.md  README.hu.md  README.jp.md  README.ko.md  README.kz.md  README.pl.md  README.ru.md  README.uk.md  README.zh.md
phantom-engine/: CMakeLists.txt
phantom-engine/include/phantom/: cache.hpp  download.hpp  governor.hpp  launch.hpp  module.hpp  oracle.hpp
phantom-engine/src/: cache.cpp  download.cpp  governor.cpp  launch.cpp  main.cpp  oracle.cpp
scripts/: build-tutorial.ts  docs.ts  fix-vchip.js  gen-testids.ts  generate-icons.py  global-rebrand.js  rebrand.mjs  validate-i18n.ts
(+679 files in other folders)
